<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    tools:context=".CreerCalembours">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/saisir" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/et_typeCalembours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="15sp"
        android:hint="Type"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_questionCalembours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="15sp"
        android:hint="Question"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_reponseCalembours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="15sp"
        android:hint="Réponse"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_annuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="5"
            android:text="@string/annuler" />

        <Button
            android:id="@+id/b_enregistrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="5"
            android:text="@string/enregistrer" />
    </LinearLayout>

</LinearLayout>