<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    tools:context=".Statistique">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/statistique" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Spinner
        android:id="@+id/s_typeStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nbVue"
                android:gravity="center"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_nbVue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <View
                android:layout_width="2dp"
                android:layout_height="78dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="#FF909090" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/moyNotes"
                android:gravity="center"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_moyNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:text="0"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/b_retourStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/retour" />

</LinearLayout>